fixed scrollbar visibility

--- a/styles/shared.css
+++ b/styles/shared.css
@@ -34,14 +34,14 @@ body {
   position: fixed;
   top: 0;
   left: 0;
-  width: calc(100% - 9px);
+  width: 100%;
   background: rgba(255, 255, 255, 0.1) !important;
   backdrop-filter: blur(6px);
   z-index: 900;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  transform: translateX(5px);
+  /* transform: translateX(5px); */
 }
 
 .row {
@@ -137,4 +137,19 @@ body {
     78.2706767320633%,
     #ba7339 100%
   );
+}
+
+/* Hide  for Chrome, Safari and Opera */
+html::-webkit-,
+body::-webkit- {
+  display: none;
+}
+
+/* Hide  for IE, Edge and Firefox */
+html,
+body {
+  -ms-overflow-style: none;
+  /* IE and Edge */
+  -width: none;
+  /* Firefox */
 }
